Add newlines in all files

--- a/src/index.pug
+++ b/src/index.pug
@@ -15,15 +15,16 @@ html(lang="ru")
         meta(name="theme-color" content="#ffffff")
 
         link(rel="stylesheet", href="../static/css/fonts.css")
-    body 
-        ul 
-            li 
-                a(href="./pages/auth/auth.pug") Авторизация
-            li
-                a(href="./pages/reg/reg.pug") Регистрация
-            li
-                a(href="./pages/profile/profile.pug") Профиль
-            li
-                a(href="./pages/error/error.pug") Ошибка
-            li
-                a(href="./pages/chat/chat.pug") Чат
+    body
+        nav
+            ul 
+                li 
+                    a(href="./pages/auth/auth.pug") Авторизация
+                li
+                    a(href="./pages/reg/reg.pug") Регистрация
+                li
+                    a(href="./pages/profile/profile.pug") Профиль
+                li
+                    a(href="./pages/error/error.pug") Ошибка
+                li
+                    a(href="./pages/chat/chat.pug") Чат
