--- a/src/components/message/message.pug
+++ b/src/components/message/message.pug
@@ -34,4 +34,4 @@ div(class="message")
                 svg(width="15" height="10" viewBox="0 0 15 10" xmlns="http://www.w3.org/2000/svg")
                     path(d="M0 0V10H15L0 0Z")
     div(class="message__tools")
-        input(type="text" name="messageInput" placeholder="Введите сообщение")
+        input(type="text" name="message" placeholder="Введите сообщение")
