--- a/src/pages/error/error.pug
+++ b/src/pages/error/error.pug
@@ -5,8 +5,9 @@ html(lang="ru")
         include ../../components/head/head.pug
         link(rel="stylesheet", href="./error.scss")
     body
-        div(class="wrapper")
-            div
-                h1(class="error__code") 500
-                p(class="error__description") Скоро починим
-            a(href="#" class="backup") Вернуться назад
+        main
+            div(class="wrapper")
+                div
+                    h1(class="error__code") 500
+                    p(class="error__description") Скоро починим
+                a(href="#" class="backup") Вернуться назад
