--- a/src/pages/auth/auth.pug
+++ b/src/pages/auth/auth.pug
@@ -8,20 +8,21 @@ html(lang="ru")
         link(rel="stylesheet", href="../../components/form/form.scss")
         link(rel="stylesheet", href="./auth.scss")
         script(src='../../utils/visible.js' defer='')
-    body 
-        div(class="form")
-            h1(class="form__logo") Вход
-            form(action="#" class="form__main")
-                - var _type = 'text'
-                - var _name = 'login'
-                - var placeholder = 'Логин'
-                - var visible = false
-                include ../../components/input/input.pug
-                - var _type = 'password'
-                - var _name = 'pass'
-                - var placeholder = 'Пароль'
-                - var visible = true
-                include ../../components/input/input.pug
-                - var content = 'Войти'
-                include ../../components/button/button.pug
-            a(href="#" class="form__noaccount") Нет аккаунта?
+    body
+        main
+            div(class="form")
+                h1(class="form__logo") Вход
+                form(action="#" class="form__main")
+                    - var _type = 'text'
+                    - var _name = 'login'
+                    - var placeholder = 'Логин'
+                    - var visible = false
+                    include ../../components/input/input.pug
+                    - var _type = 'password'
+                    - var _name = 'password'
+                    - var placeholder = 'Пароль'
+                    - var visible = true
+                    include ../../components/input/input.pug
+                    - var content = 'Войти'
+                    include ../../components/button/button.pug
+                a(href="#" class="form__noaccount") Нет аккаунта?
