--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -3,13 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
-body, html{
-    width: 100vw;
-    height: 100vh;
+body, html, main{
+    width: 100%;
+    height: 100%;
     font-family: "Montserrat", sans-serif;
     font-weight: normal;
 }
-body{
+main{
     display: flex;
 }
 a{
