--- a/src/pages/reg/reg.scss
+++ b/src/pages/reg/reg.scss
@@ -3,12 +3,14 @@
     padding: 0;
     box-sizing: border-box;
 }
-body, html{
+body, html, main{
     background-color: white;
     font-family: "Montserrat", serif;
     font-weight: normal;
     width: 100%;
     height: 100%;
+}
+main {
     display: flex;
 }
 @media screen and (max-width: 440px) {
