--- a/src/index.pug
+++ b/src/index.pug
@@ -15,6 +15,7 @@ html(lang="ru")
         meta(name="theme-color" content="#ffffff")
 
         link(rel="stylesheet", href="../static/css/fonts.css")
+        link(rel="stylesheet" href="./index.scss")
     body
         nav
             ul 
