--- a/src/pages/chat/chat.pug
+++ b/src/pages/chat/chat.pug
@@ -7,6 +7,7 @@ html(lang="ru")
         link(rel="stylesheet", href="../../../static/css/simplebar.css")
         link(rel="stylesheet", href="../../components/chat/chat.scss")
         link(rel="stylesheet", href="../../components/message/message.scss")
+        link(rel="stylesheet", href="../../index.scss")
         script(src="../../../static/js/simplebar.min.js" defer="")
     body
         div(class="wrapper")
