--- a/src/pages/profile/profile.pug
+++ b/src/pages/profile/profile.pug
@@ -4,6 +4,7 @@ html(lang="ru")
         - var title = 'Профиль'
         include ../../components/head/head.pug
         link(rel="stylesheet", href="./profile.scss")
+        link(rel="stylesheet", href="../../index.scss")
     body
         main
             div(class="wrapper")
