--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -6,8 +6,8 @@
     line-height: 20px;
     width: 250px;
     height: 50px;
-    color: #E2E2E2;
-    background: #242424;
+    color: var(--bg-color-2);
+    background: var(--bg-color-3);
     border-radius: 5px;
     border-width: 0px;
 }
