--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -1,8 +1,8 @@
 .chat{
   &__tools{
     height: 20vh;
-    background-color: #D9D9D9;
-    border-bottom: 3px solid #242424;
+    background-color: var(--bg-color-2);
+    border-bottom: 3px solid var(--bg-color-3);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -10,8 +10,8 @@
       width: 80%;
       height: 30px;
       border-radius: 5px;
-      background-color: #858585;
-      color: #242424;
+      background-color: var(--msg-color-1);
+      color: var(--bg-color-3);
       margin-left: 10%;
     }
   }
@@ -30,13 +30,13 @@
   }
   &__container{
     height: 80vh;
-    background-color: #d9d9d9;
+    background-color: var(--bg-color-2);
   }
   &__item{
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #D9D9D9;
+    background-color: var(--bg-color-2);
     height: 100px;
   }
 }
