--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -5,7 +5,7 @@
     justify-content: space-around;
     margin: auto;
     border: 1px solid black;
-    background-color: #F5F5F5;
+    background-color: var(--bg-color-1);
     box-shadow: 10px -10px 4px rgba(25, 159, 201, 0.25);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
     width: 440px;
@@ -23,7 +23,7 @@
     }
     &__noaccount{
         text-decoration: none;
-        color: #070707;
+        color: var(--bg-color-3);
         font-size: 16px;
     }
 }
