--- a/src/components/message/message.scss
+++ b/src/components/message/message.scss
@@ -1,19 +1,19 @@
 .message{
-  background-color: #D9D9D9;
-  border-left: 3px solid #242424;
+  background-color: var(--bg-color-2);
+  border-left: 3px solid var(--bg-color-3);
   position: relative;
   &__tools{
     position: absolute;
     bottom: 3px;
     width: 100%;
     height: 10vh;
-    border-top: 3px solid #242424;
+    border-top: 3px solid var(--bg-color-3);
     display: flex;
     justify-content: center;
     align-items: center;
     & input{
-      background-color: #858585;
-      color: #242424;
+      background-color: var(--msg-color-1);
+      color: var(--bg-color-3);
       width: 80%;
       height: 30px;
       border-radius: 5px;
@@ -28,22 +28,22 @@
     &[data-author="tail-out"]{
       justify-content: flex-end;
       & svg{
-        fill: #199FC9;
+        fill: var(--msg-color-2);
         right: -15px;
       }
       & > .message__wrapper{
-        background-color: #199FC9;
+        background-color: var(--msg-color-2);
         border-bottom-right-radius: 0;
         margin-right: 25px;
       }
     }
     &[data-author="tail-in"] > .message__wrapper{
-      background-color: #858585;
+      background-color: var(--msg-color-1);
       border-bottom-left-radius: 0;
       margin-left: 25px;
     }
     &[data-author="tail-in"] svg{
-      fill: #858585;
+      fill: var(--msg-color-1);
       left: -15px;
     }
   }
