--- a/src/pages/reg/reg.pug
+++ b/src/pages/reg/reg.pug
@@ -7,6 +7,7 @@ html(lang="ru")
         link(rel="stylesheet", href="../../components/input/input.scss")
         link(rel="stylesheet", href="../../components/form/form.scss")
         link(rel="stylesheet", href="./reg.scss")
+        link(rel="stylesheet", href="../../index.scss")
         script(src='../../utils/visible.js' defer='')
     body
         main
