Add editor page

--- a/src/index.pug
+++ b/src/index.pug
@@ -29,3 +29,5 @@ html(lang="ru")
                     a(href="./pages/error/error.pug") Ошибка
                 li
                     a(href="./pages/chat/chat.pug") Чат
+                li
+                    a(href="./pages/edit/edit.pug") Редактор
