--- a/src/index.scss
+++ b/src/index.scss
@@ -9,3 +9,9 @@
     --link-color-1: #03a0d0;
     --link-color-2: #ff0000;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
