Yeah! Components system is working!

--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -21,7 +21,7 @@
         font-size: 36px;
         font-weight: 500;
     }
-    &__noaccount{
+    &__link{
         text-decoration: none;
         color: var(--bg-color-3);
         font-size: 16px;
