--- a/src/components/form/form.hbs
+++ b/src/components/form/form.hbs
@@ -1,5 +1,10 @@
 <h1 class="form__logo">{{title}}</h1>
 <form class="form__main">
-    {{{input}}}
+    {{#each inputs}}
+        {{{this}}}
+    {{/each}}
     {{{button}}}
 </form>
+{{#if link}}
+    <a href={{link.href}} class="form__link">{{link.text}}</a>
+{{/if}}
