--- a/src/components/input/input.hbs
+++ b/src/components/input/input.hbs
@@ -1,4 +1,4 @@
-<input type={{_type}} required="required" name={{_name}}>
+<input type={{type}} required="required" name={{name}}>
 <span>{{placeholder}}</span>
 {{#if visible}}
     <div class="visible"></div>
