--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -19,7 +19,7 @@ body, .wrapper{
     font-family: "Montserrat" !important;
 }
 
-.wrapper{
+.chat__wrapper{
     display: grid;
     grid-template-columns: 3fr 9fr;
 }
