--- a/src/components/AnotherInput/anotherInput.hbs
+++ b/src/components/AnotherInput/anotherInput.hbs
@@ -1,2 +1,3 @@
 <span>{{label}}</span>
-<input type={{type}} disabled placeholder={{placeholder}}>
+<input type={{type}} name={{name}} disabled placeholder={{placeholder}}>
+<div class="error"></div>
