--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,28 +1,29 @@
 .inputBox{
     position: relative;
     width: 250px;
-}
-.inputBox input{
-    font-family: "Montserrat", sans-serif;
-    width: 100%;
-    height: 50px;
-    padding: 20px 10px;
-    border: 0px;
-    background-color: var(--bg-color-2);
-    color: black;
-    outline: none;
-    font-size: 1em;
-    transition: .5s;
-
-}
-.inputBox span{
-    position: absolute;
-    left: 0;
-    padding: 15px 10px;
-    pointer-events: none;
-    font-size: 1em;
-    color: black;
-    transition: .5s;
+    & input {
+        width: 100%;
+        height: 50px;
+        padding: 20px 10px;
+        border: 0px;
+        background-color: var(--bg-color-2);
+        color: black;
+        outline: none;
+        font-size: 1em;
+        transition: .5s;
+        &:-internal-autofill-selected ~ span {
+            background-color: rgb(232, 240, 254) !important;
+        }
+    }
+    & span {
+        position: absolute;
+        left: 0;
+        padding: 15px 10px;
+        pointer-events: none;
+        font-size: 1em;
+        color: black;
+        transition: .5s;
+    }
 }
 .inputBox input:focus ~ span, .inputBox input:valid ~ span{
     color: black;
@@ -46,4 +47,9 @@
     top: 9px;
     right: 5px;
     z-index: 90;
+}
+.error{
+    position: absolute;
+    color: red;
+    font-size: small;
 }
