--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -1,13 +1,14 @@
 .button {
-    font-family: 'Montserrat';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    width: 250px;
-    height: 50px;
-    color: var(--bg-color-2);
-    background: var(--bg-color-3);
-    border-radius: 5px;
-    border-width: 0px;
+	width: 250px;
+	height: 50px;
+
+	color: var(--bg-color-2);
+	border-width: 0;
+	border-radius: 5px;
+	background: var(--bg-color-3);
+
+	font-size: 16px;
+	font-weight: 500;
+	font-style: normal;
+	line-height: 20px;
 }
