--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -1,29 +1,36 @@
 .form {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: auto;
-    border: 1px solid black;
-    background-color: var(--bg-color-1);
-    box-shadow: 10px -10px 4px rgba(25, 159, 201, 0.25);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    width: 440px;
-    height: 650px;
-    &__main{
-        flex-direction: column;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 40px;
-    }
-    &__logo{
-        font-size: 36px;
-        font-weight: 500;
-    }
-    &__link{
-        text-decoration: none;
-        color: var(--bg-color-3);
-        font-size: 16px;
-    }
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	justify-content: space-around;
+
+	width: 440px;
+	height: 650px;
+	margin: auto;
+
+	border: 1px solid black;
+	background-color: var(--bg-color-1);
+	box-shadow: 10px -10px 4px rgb(25 159 201 / 25%);
+	filter: drop-shadow(0 4px 4px rgb(0 0 0 / 25%));
+
+	&__main{
+		display: flex;
+		align-items: center;
+		flex-direction: column;
+		justify-content: center;
+		gap: 40px;
+	}
+
+	&__logo{
+		font-size: 36px;
+		font-weight: 500;
+	}
+
+	&__link{
+		text-decoration: none;
+
+		color: var(--bg-color-3);
+
+		font-size: 16px;
+	}
 }
