--- a/src/components/input/input.scss
+++ b/src/components/input/input.scss
@@ -1,55 +1,77 @@
 .inputBox{
-    position: relative;
-    width: 250px;
-    & input {
-        width: 100%;
-        height: 50px;
-        padding: 20px 10px;
-        border: 0px;
-        background-color: var(--bg-color-2);
-        color: black;
-        outline: none;
-        font-size: 1em;
-        transition: .5s;
-        &:-internal-autofill-selected ~ span {
-            background-color: rgb(232, 240, 254) !important;
-        }
-    }
-    & span {
-        position: absolute;
-        left: 0;
-        padding: 15px 10px;
-        pointer-events: none;
-        font-size: 1em;
-        color: black;
-        transition: .5s;
-    }
+	position: relative;
+
+	width: 250px;
+
+	& span {
+		position: absolute;
+		left: 0;
+
+		padding: 15px 10px;
+
+		transition: .5s;
+		pointer-events: none;
+
+		color: black;
+
+		font-size: 1em;
+	}
+
+	& input {
+		width: 100%;
+		height: 50px;
+		padding: 20px 10px;
+
+		transition: .5s;
+
+		color: black;
+		border: 0;
+		outline: none;
+		background-color: var(--bg-color-2);
+
+		font-size: 1em;
+
+		&:-internal-autofill-selected ~ span {
+			background-color: rgb(232 240 254) !important;
+		}
+
+		&:focus, &:valid {
+			border: 0;
+			
+			& ~ span {
+				padding: 0 10px;
+
+				transform: translateX(10px) translateY(-7px);
+				letter-spacing: .3em;
+
+				color: black;
+				border-right: 1px solid black;
+				border-left: 1px solid black;
+				background: var(--bg-color-2);
+
+				font-size: .65em;
+			}
+		}
+	}
 }
-.inputBox input:focus ~ span, .inputBox input:valid ~ span{
-    color: black;
-    transform: translateX(10px) translateY(-7px);
-    font-size: .65em;
-    padding: 0 10px;
-    background: var(--bg-color-2);
-    border-left: 1px solid black;
-    border-right: 1px solid black;
-    letter-spacing: .3em;
-}
-.inputBox input:focus, .inputBox input:valid{
-    border: 0px;
-}
+
 .visible{
-    background-image: url(../../../static/images/show.png);
-    background-size: cover;
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    top: 9px;
-    right: 5px;
-    z-index: 90;
+	position: absolute;
+	z-index: 90;
+	top: 9px;
+	right: 5px;
+
+	width: 32px;
+	height: 32px;
+
+	background-image: url("../../../static/images/show.png");
+	background-size: cover;
 }
+
 .error{
-    position: absolute;
-    color: red;
-    font-size: small;
+	position: absolute;
+
+	color: red;
+
+	font-size: small;
 }
