--- a/src/pages/auth/auth.scss
+++ b/src/pages/auth/auth.scss
@@ -1,26 +1,33 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
+
 body, html, main{
-    background-color: white;
-    font-family: "Montserrat", serif;
-    font-weight: normal;
-    width: 100%;
-    height: 100%;
+	width: 100%;
+	height: 100%;
+
+	background-color: white;
+
+	font-family: Montserrat, serif;
+	font-weight: normal;
 }
+
 main {
-    display: flex;
+	display: flex;
 }
+
 @media screen and (max-width: 440px) {
-    .form{
-        border: none;
-    }
+	.form{
+		border: none;
+	}
 }
+
 @media screen and (max-height: 600px) {
-    .form{
-        border: none;
-        height: 100%;
-    }
+	.form{
+		height: 100%;
+
+		border: none;
+	}
 }
