--- a/src/pages/chat/chat.scss
+++ b/src/pages/chat/chat.scss
@@ -1,55 +1,61 @@
 input {
-    outline: none;
-    border: none;
-    padding: 1px 2px;
+	padding: 1px 2px;
+
+	border: none;
+	outline: none;
 }
 
 input::placeholder{
-    color: var(--bg-color-3);
+	color: var(--bg-color-3);
 }
 
 html{
-    width: 100vw;
-    height: 100vh;
+	width: 100vw;
+	height: 100vh;
 }
 
 body, .wrapper{
-    height: 100%;
-    width: 100%;
-    font-family: "Montserrat" !important;
+	width: 100%;
+	height: 100%;
+
+	font-family: Montserrat, sans-serif !important;
 }
 
 .chat__wrapper{
-    display: grid;
-    grid-template-columns: 3fr 9fr;
+	display: grid;
+	grid-template-columns: 3fr 9fr;
 }
 
 ._container{
-    overflow: auto;
+	overflow: auto;
 }
 
 .avatar{
-    width: 75px !important;
-    height: 75px;
-    margin: 1%;
-    background-color: var(--bg-color-3);
-    border-radius: 50%;
+	width: 75px !important;
+	height: 75px;
+	margin: 1%;
+
+	border-radius: 50%;
+	background-color: var(--bg-color-3);
 }
 
 .search_magnifier {
-    position: absolute;
-    height: 30px;
-    width: 30px;
-    left: 20%;
-    top: 15.5vh;
+	position: absolute;
+	top: 15.5vh;
+	left: 20%;
+
+	width: 30px;
+	height: 30px;
 }
 
 .tools__top{
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-items: center;
-    & svg {
-        padding-right: 10px;
-    }
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+
+	width: 100%;
+
+	& svg {
+		padding-right: 10px;
+	}
 }
