--- a/src/pages/error/error.scss
+++ b/src/pages/error/error.scss
@@ -1,24 +1,29 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
 body, html, main{
-    font-family: "Montserrat", sans-serif;
-    font-weight: normal;
-    height: 100%;
-    width: 100%;
+	width: 100%;
+	height: 100%;
+
+	font-family: Montserrat, sans-serif;
+	font-weight: normal;
 }
+
 main{
-    display: flex;
+	display: flex;
 }
+
 .wrapper{
-    margin: auto;
+	margin: auto;
 }
+
 .wrapper *{
-    text-align: center;
+	text-align: center;
 }
+
 .backup{
-    text-decoration: none;
+	text-decoration: none;
 }
