--- a/src/pages/profile/profile.scss
+++ b/src/pages/profile/profile.scss
@@ -1,54 +1,70 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
+
 body, html, main{
-    width: 100%;
-    height: 100%;
-    font-family: "Montserrat", sans-serif;
-    font-weight: normal;
+	width: 100%;
+	height: 100%;
+
+	font-family: Montserrat, sans-serif;
+	font-weight: normal;
 }
+
 main{
-    display: flex;
+	display: flex;
 }
+
 a{
-    text-decoration: none;
+	text-decoration: none;
 }
+
 .wrapper{
-    margin: auto;
-    height: 80%;
-    width: 720px;
+	width: 720px;
+	height: 80%;
+	margin: auto;
 }
+
 .main__avatar{
-    background-size: cover;
-    border-radius: 50%;
-    height: 100px;
-    width: 100px;
-    margin: 0 auto;
+	width: 100px;
+	height: 100px;
+	margin: 0 auto;
+
+	border-radius: 50%;
+	background-size: cover;
 }
+
 .main__name{
-    text-align: center;
-    margin-bottom: 10%;
+	margin-bottom: 10%;
+
+	text-align: center;
 }
+
 .item{
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    border-bottom: 2px solid gainsboro;
-    margin-top: 3%;
+	display: flex;
+	justify-content: space-between;
+
+	width: 100%;
+	margin-top: 3%;
+
+	border-bottom: 2px solid gainsboro;
 }
+
 .red{
-    color: var(--link-color-2);
+	color: var(--link-color-2);
 }
+
 .blue{
-    color: var(--link-color-1);
+	color: var(--link-color-1);
 }
+
 .tools{
-    margin-top: 10%;
+	margin-top: 10%;
 }
+
 @media screen and (max-width: 720px) {
-    .wrapper{
-        width: 95%;
-    }
+	.wrapper{
+		width: 95%;
+	}
 }
