--- a/src/components/Input/input.scss
+++ b/src/components/Input/input.scss
@@ -1,4 +1,4 @@
-.inputBox{
+.inputBox {
 	position: relative;
 
 	width: 250px;
@@ -9,7 +9,7 @@
 
 		padding: 15px 10px;
 
-		transition: .5s;
+		transition: 0.5s;
 		pointer-events: none;
 
 		color: black;
@@ -22,7 +22,7 @@
 		height: 50px;
 		padding: 20px 10px;
 
-		transition: .5s;
+		transition: 0.5s;
 
 		color: black;
 		border: 0;
@@ -35,27 +35,28 @@
 			background-color: rgb(232 240 254) !important;
 		}
 
-		&:focus, &:valid {
+		&:focus,
+		&:valid {
 			border: 0;
-			
+
 			& ~ span {
 				padding: 0 10px;
 
 				transform: translateX(10px) translateY(-7px);
-				letter-spacing: .3em;
+				letter-spacing: 0.3em;
 
 				color: black;
 				border-right: 1px solid black;
 				border-left: 1px solid black;
 				background: var(--bg-color-2);
 
-				font-size: .65em;
+				font-size: 0.65em;
 			}
 		}
 	}
 }
 
-.visible{
+.visible {
 	position: absolute;
 	z-index: 90;
 	top: 9px;
@@ -68,7 +69,7 @@
 	background-size: cover;
 }
 
-.error{
+.error {
 	position: absolute;
 
 	color: red;
