--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,8 @@
 	padding: 0;
 }
 
-ul, li {
+ul,
+li {
 	list-style: none;
 }
 
@@ -22,11 +23,11 @@ html {
 	font-family: Montserrat, sans-serif;
 }
 
-input::placeholder{
+input::placeholder {
 	font-family: Montserrat, sans-serif;
 }
 
-input{
+input {
 	font-family: Montserrat, sans-serif;
 }
 
