--- a/src/pages/Auth/auth.scss
+++ b/src/pages/Auth/auth.scss
@@ -4,7 +4,9 @@
 	padding: 0;
 }
 
-body, html, main{
+body,
+html,
+main {
 	width: 100%;
 	height: 100%;
 
@@ -19,13 +21,13 @@ main {
 }
 
 @media screen and (max-width: 440px) {
-	.form{
+	.form {
 		border: none;
 	}
 }
 
 @media screen and (max-height: 600px) {
-	.form{
+	.form {
 		height: 100%;
 
 		border: none;
