--- a/src/pages/Chat/chat.scss
+++ b/src/pages/Chat/chat.scss
@@ -5,32 +5,33 @@ input {
 	outline: none;
 }
 
-input::placeholder{
+input::placeholder {
 	color: var(--bg-color-3);
 }
 
-html{
+html {
 	width: 100vw;
 	height: 100vh;
 }
 
-body, .wrapper{
+body,
+.wrapper {
 	width: 100%;
 	height: 100%;
 
 	font-family: Montserrat, sans-serif !important;
 }
 
-.chat__wrapper{
+.chat__wrapper {
 	display: grid;
 	grid-template-columns: 3fr 9fr;
 }
 
-._container{
+._container {
 	overflow: auto;
 }
 
-.avatar{
+.avatar {
 	width: 75px !important;
 	height: 75px;
 	margin: 1%;
@@ -48,7 +49,7 @@ body, .wrapper{
 	height: 30px;
 }
 
-.tools__top{
+.tools__top {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
