--- a/src/pages/Reg/reg.scss
+++ b/src/pages/Reg/reg.scss
@@ -1,4 +1,6 @@
-body, html, main{
+body,
+html,
+main {
 	width: 100%;
 	height: 100%;
 
@@ -12,13 +14,13 @@ main {
 }
 
 @media screen and (max-width: 440px) {
-	.form{
+	.form {
 		border: none;
 	}
 }
 
 @media screen and (max-height: 600px) {
-	.form{
+	.form {
 		height: 100%;
 
 		border: none;
