--- a/src/pages/Error/error.scss
+++ b/src/pages/Error/error.scss
@@ -11,11 +11,11 @@ main {
 	display: flex;
 }
 
-.wrapper {
+.error_wrapper {
 	margin: auto;
 }
 
-.wrapper * {
+.error_wrapper * {
 	text-align: center;
 }
 
