--- a/src/pages/Chat/chat.scss
+++ b/src/pages/Chat/chat.scss
@@ -1,4 +1,4 @@
-input {
+.chat__wrapper > input {
 	padding: 1px 2px;
 
 	border: none;
@@ -18,8 +18,6 @@ body,
 .wrapper {
 	width: 100%;
 	height: 100%;
-
-	font-family: Montserrat, sans-serif !important;
 }
 
 .chat__wrapper {
@@ -32,7 +30,7 @@ body,
 }
 
 .avatar {
-	width: 75px !important;
+	width: 75px;
 	height: 75px;
 	margin: 1%;
 
