--- a/src/pages/Reg/reg.scss
+++ b/src/pages/Reg/reg.scss
@@ -1,11 +1,14 @@
 @media screen and (max-width: 440px) {
 	.form {
+		height: 100%;
+
 		border: none;
 	}
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 650px) {
 	.form {
+		width: 100%;
 		height: 100%;
 
 		border: none;
