Real final fixes!

--- a/src/pages/Chat/chat.hbs
+++ b/src/pages/Chat/chat.hbs
@@ -21,11 +21,11 @@
     </div>
 </div>
 <div class="message">
-    <div class="message__container _container" data-simplebar>
+    <main class="message__container _container" data-simplebar>
         {{#each messages}}
             {{{this}}}
         {{/each}}
-    </div>
+    </main>
     <div class="message__tools">
         <input type="text" name="message" placeholder="Введите сообщение">
     </div>
