--- a/src/pages/Settings/settings.hbs
+++ b/src/pages/Settings/settings.hbs
@@ -127,10 +127,12 @@
         </ul>
     </div>
     <div class="layout__contents">
-        <section>
-            <h2>Профиль</h2>
-            <li role="separator"></li>
-            {{{form}}}
-        </section>
+        <main>
+            <section>
+                <h2>Профиль</h2>
+                <li role="separator"></li>
+                {{{form}}}
+            </section>
+        </main>
     </div>
 </div>
