--- a/src/pages/Navigate/navigate.hbs
+++ b/src/pages/Navigate/navigate.hbs
@@ -1,7 +1,9 @@
-<ul>
-    <li><a href="/signin">Вход</a></li>
-    <li><a href="/signup">Регистрация</a></li>
-    <li><a href="/profile">Профиль и настройки</a></li>
-    <li><a href="/chat">Чат</a></li>
-    <li><a href="/error">Ошибка</a></li>
-</ul>
+<nav>
+    <ul>
+        <li><a href="/signin">Вход</a></li>
+        <li><a href="/signup">Регистрация</a></li>
+        <li><a href="/profile">Профиль и настройки</a></li>
+        <li><a href="/chat">Чат</a></li>
+        <li><a href="/error">Ошибка</a></li>
+    </ul>
+</nav>
