Add Link component like in React Native and fix Router

--- a/src/components/Form/form.hbs
+++ b/src/components/Form/form.hbs
@@ -5,6 +5,4 @@
     {{/each}}
     {{{button}}}
 </form>
-{{#if link}}
-    <a href={{link.href}} class="form__link">{{link.text}}</a>
-{{/if}}
+{{{link}}}
