--- a/src/pages/Error/error.hbs
+++ b/src/pages/Error/error.hbs
@@ -3,5 +3,5 @@
         <h1 class="error_code">{{code}}</h1>
         <p class="error_description">{{description}}</p>
     </div>
-    <a href="/" class="backup">Вернуться на главную страницу</a>
+    {{{link}}}
 </div>
