Refactor Block: phase 1

--- a/src/pages/Navigate/navigate.hbs
+++ b/src/pages/Navigate/navigate.hbs
@@ -1,7 +1,9 @@
-<nav>
-    <ul>
-        {{#each links}}
-            <li>{{{this}}}</li>
-        {{/each}}
-    </ul>
-</nav>
+<main>
+    <nav>
+        <ul>
+            {{#each links}}
+                <li>{{{this}}}</li>
+            {{/each}}
+        </ul>
+    </nav>
+</main>
