Refactor Block: phase 2

--- a/src/components/Form/form.hbs
+++ b/src/components/Form/form.hbs
@@ -1,8 +1,10 @@
-<h1 class="form__logo">{{title}}</h1>
-<form class="form__main">
-    {{#each inputs}}
-        {{{this}}}
-    {{/each}}
-    {{{button}}}
-</form>
-{{{link}}}
+<div class="form">
+    <h1 class="form__logo">{{title}}</h1>
+    <form class="form__main">
+        {{#each inputs}}
+            {{{this}}}
+        {{/each}}
+        {{{button}}}
+    </form>
+    {{{link}}}
+</div>
