--- a/src/components/Input/input.hbs
+++ b/src/components/Input/input.hbs
@@ -1,6 +1,8 @@
-<input type={{type}} required="required" name={{name}}>
-<span>{{placeholder}}</span>
-<div class="error"></div>
-{{#if visible}}
-    <div class="visible"></div>
-{{/if}}
+<div class="inputBox">
+    <input type={{type}} required="required" name={{name}} value="{{value}}">
+    <span>{{placeholder}}</span>
+    <div class="error">{{error}}</div>
+    {{#if visible}}
+        <div class="visible"></div>
+    {{/if}}
+</div>
