Refactor Block: phase 3

--- a/src/components/AnotherForm/anotherForm.hbs
+++ b/src/components/AnotherForm/anotherForm.hbs
@@ -1,7 +1,9 @@
-{{#each inputs}}
-    {{{this}}}
-{{/each}}
-<div>
-    {{{button1}}}
-    {{{button2}}}
-</div>
+<form class="sform">
+    {{#each inputs}}
+        {{{this}}}
+    {{/each}}
+    <div>
+        {{{button1}}}
+        {{{button2}}}
+    </div>
+</form>
