--- a/src/components/AnotherInput/anotherInput.hbs
+++ b/src/components/AnotherInput/anotherInput.hbs
@@ -1,3 +1,5 @@
-<span>{{label}}</span>
-<input type={{type}} name={{name}} disabled placeholder={{placeholder}}>
-<div class="error"></div>
+<div class="inputBox_big">
+    <span>{{label}}</span>
+    <input type={{type}} name={{name}} disabled placeholder={{placeholder}}>
+    <div class="error"></div>
+</div>
