--- a/src/components/Message/message.hbs
+++ b/src/components/Message/message.hbs
@@ -1,6 +1,8 @@
-<div class="message__wrapper">
-    <span>{{content}}</span>
-    <svg width="15" height="10" viewBox="0 0 15 10" xmlns="http://www.w3.org/2000/svg">
-        <path d="M15 0V10H0L15 0Z"></path>
-    </svg>
+<div class="message__item" data-author="{{type}}">
+    <div class="message__wrapper">
+        <span>{{content}}</span>
+        <svg width="15" height="10" viewBox="0 0 15 10" xmlns="http://www.w3.org/2000/svg">
+            <path d="M15 0V10H0L15 0Z"></path>
+        </svg>
+    </div>
 </div>
