--- a/src/pages/Error/error.hbs
+++ b/src/pages/Error/error.hbs
@@ -1,7 +1,9 @@
-<div class="error_wrapper">
-    <div>
-        <h1 class="error_code">{{code}}</h1>
-        <p class="error_description">{{description}}</p>
+<main>
+    <div class="error_wrapper">
+        <div>
+            <h1 class="error_code">{{code}}</h1>
+            <p class="error_description">{{description}}</p>
+        </div>
+        {{{link}}}
     </div>
-    {{{link}}}
-</div>
+</main>
