Added a lot of functionality

--- a/src/components/Chat/chat.hbs
+++ b/src/components/Chat/chat.hbs
@@ -2,14 +2,14 @@
     <div class="avatar"></div>
     <div class="chat__main">
         <div class="chat__top">
-            <h2>{{author}}</h2>
+            <h2>{{title}}</h2>
             <svg width="33" height="20" viewBox="0 0 33 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <rect width="23.4709" height="4.50819" rx="2.2541" transform="matrix(0.699328 -0.714801 0.699328 0.714801 13.3746 16.7773)" fill="#242424"></rect>
                 <rect width="23.4709" height="4.50819" rx="2.2541" transform="matrix(-0.699328 -0.714801 0.699328 -0.714801 16.4138 20)" fill="#242424"></rect>
             </svg>
         </div>
         <div class="chat__content">
-            <p>{{content}}</p>
+            <p>{{message}}</p>
         </div>
     </div>
 </div>
