--- a/src/components/SmallForm/template.hbs
+++ b/src/components/SmallForm/template.hbs
@@ -1,9 +1,7 @@
 <form class="sform">
+    <h3>{{title}}</h3>
     {{#each inputs}}
         {{{this}}}
     {{/each}}
-    <div>
-        {{{button1}}}
-        {{{button2}}}
-    </div>
+    {{{button}}}
 </form>
