--- a/src/components/SmallForm/styles.scss
+++ b/src/components/SmallForm/styles.scss
@@ -2,6 +2,7 @@
 	display: flex;
 	flex-direction: column;
 
-	width: max-content;
-	gap: 15px;
+	min-width: 280px;
+	gap: 30px;
+	align-items: center;
 }
