--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,6 @@
 :root {
-	--bg-color-1: #f5f5f5;
-	--bg-color-2: #d9d9d9;
+	--bg-color-1: whitesmoke;
+	--bg-color-2: lightgray;
 	--bg-color-3: #242424;
 	--msg-color-1: #858585;
 	--msg-color-2: #199fc9;
