--- a/src/components/Chat/chat.scss
+++ b/src/components/Chat/chat.scss
@@ -20,15 +20,13 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-
-		width: 80%;
 		height: 100%;
-		padding-right: 10px;
+		width: calc(100% - 65px);
 	}
 
 	&__container {
 		height: 80vh;
-
+		padding: 1px 4px 0;
 		background-color: var(--bg-color-2);
 	}
 
@@ -37,8 +35,22 @@
 		align-items: center;
 		flex-direction: row;
 
-		height: 100px;
+		cursor: pointer;
 
-		background-color: var(--bg-color-2);
+		height: 75px;
+		padding: 5px;
+		border-radius: 10px;
+		
+		&:hover {
+			background-color: var(--msg-color-1);
+		}
+	}
+
+	&__avatar {
+		display: flex;
+		border-radius: 50%;
+		background-color: var(--bg-color-3);
+		height: 65px;
+		width: 65px;
 	}
 }
