--- a/src/pages/Chat/chat.scss
+++ b/src/pages/Chat/chat.scss
@@ -29,9 +29,8 @@ body,
 }
 
 .avatar {
-	width: 75px;
-	height: 75px;
-	margin: 1%;
+	width: 65px;
+	height: 100%;
 
 	border-radius: 50%;
 	background-color: var(--bg-color-3);
