--- a/src/components/Input/input.hbs
+++ b/src/components/Input/input.hbs
@@ -1,5 +1,5 @@
 <div class="inputBox">
-    <input type={{type}} required="required" name={{name}} value="{{value}}">
+    <input type={{type}} required name={{name}} value="{{value}}">
     <span>{{placeholder}}</span>
     <div class="error">{{error}}</div>
     {{#if visible}}
