--- a/src/components/Notice/notice.hbs
+++ b/src/components/Notice/notice.hbs
@@ -1,4 +1,4 @@
-<div class="notice">
+<div class="{{#if isActive}}notice active{{else}}notice{{/if}}">
     <div>
         <h2>{{title}}</h2>
         <p>{{message}}</p>
