--- a/src/components/Modal/modal.scss
+++ b/src/components/Modal/modal.scss
@@ -8,7 +8,8 @@
     position: relative;
     margin: auto;
     padding: 40 30;
-    background-color: whitesmoke;
+    background-color: var(--bg-color-1);
+    box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.14);
     z-index: 9999;
     border-radius: 12px;
 }
